<resources>
    <string name="app_name">BrahmaOSSetupWizard</string>
    <string name="create_account">Create Account</string>
    <string name="account_prof">The Brahma account is a locally generated decentralized account, which is your unique identity on Brahma OS and the primary account of your Brahma Wallet.</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Back</string>
    <string name="action_finish">Finish</string>
    <string name="action_skip">Skip</string>
    <string name="prompt_account_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="action_agree">Agree on</string>
    <string name="service_agreement">&#160;Service Agreement&#160;</string>
    <string name="protocol_and">and</string>
    <string name="privacy_policy">&#160;Privacy Policy</string>
    <string name="tip_create_account_one">&#8226;&#160;&#160;Password strength is critical to guard your account</string>
    <string name="tip_create_account_two">&#8226;&#160;&#160;BrahmaWallet can\'t recover the password, please backup cautiously</string>
    <string name="error_incorrect_name">The name is taken</string>
    <string name="error_invalid_password">This password is too simple!</string>
    <string name="error_incorrect_password">Password is not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="progress_create_account">create…</string>
    <string name="success_create_account">Create account success!</string>
    <string name="error_create_account">Create account error! please try again!</string>
    <string name="error_account_address">Error account address!</string>
    <string name="error_import_account">Import account error! please try again!</string>
    <string name="success_import_account">Import account success!</string>
    <string name="error_mnemonics">Error mnemonics!</string>

    <string name="action_import_account">Import Account</string>
    <string name="import_mnemonics_hint">Enter mnemonics, separated by spaces.</string>
    <string name="progress_import_account">import…</string>

    <string name="backup_mnemonic">Backup Mnemonic</string>
    <string name="mnemonic_prof">Asset security cannot be guaranteed without proper backup. When the application or the wallet is deleted from your device, you need the backup file to restore the wallet.</string>
    <string name="write_down_mnemonic">Please carefully copy the mnemonic below. We will verify it in the next step.</string>
    <string name="mnemonic_backup_tip">&#8226;&#160;&#160;Please make a backup in a safe environment with no camera around.</string>

    <string name="confirm_mnemonic">Confirm Mnemonic</string>
    <string name="confirm_prof">Please click on the mnemonic in order to confirm that you have backed up correctly.</string>

    <string name="title_service_terms">Brahma Wallet Service Agreement</string>

    <string name="title_language_pick">Language</string>
    <string name="language_pick_content">Choose your language</string>
    
    <string name="sim_connect">Connect to mobile network</string>
    <string name="insert_sim">The SIM card tray is located on the top left edge of your phone.\n\nUse the SIM ejection tool that comes with your phone to eject the tray and insert a nano SIM card.\n\nOnce you insert your SIM card, it may take a few seconds to activate.</string>
    <string name="sim_connecting">Connecting\u2026</string>

    <string name="title_date_time">Date &#038; time</string>
    <string name="date_time_prof">Adjust if needed.</string>
    <string name="setup_current_date">Date</string>
    <string name="setup_current_time">Time</string>
    <string name="title_fingerprint">Unlock with fingerprint</string>
    <string name="fingerprint_prof">Use your fingerprint to unlock your phone or approve purchases.</string>
    <string name="fingerprint_note">Note: Your fingerprint may be less secure than a strong pattern or PIN.</string>

    <string name="settings_fingerprint_setup_title">Select backup screen lock type</string>
    <string name="settings_fingerprint_setup_details">How would you like to lock your screen?</string>
    <string name="settings_lockscreen_setup_title">Select screen lock type</string>
    <string name="settings_lockscreen_setup_details">How would you like to lock your screen?</string>

    <string name="finish_waiting">Just a sec\u2026</string>
</resources>
