<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/space_normal"
        android:layout_marginStart="@dimen/space_normal">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/space_larger"
                android:scaleType="fitCenter"
                android:src="@drawable/account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/create_account"
                android:textColor="#FF000000"
                android:textSize="@dimen/font_size_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/account_prof"
                android:textColor="@color/color_hint_text"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_create_account_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/space_small">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_repeat_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/space_small">

                <CheckBox
                    android:id="@+id/checkbox_read_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/action_agree" />

                <TextView
                    android:id="@+id/service_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/service_agreement"
                    android:textColor="@color/master" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/protocol_and" />

                <TextView
                    android:id="@+id/privacy_policy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/master" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/space_small">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_note_content"
                    android:text="@string/tip_create_account_one"
                    android:textColor="#FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_note_content"
                    android:text="@string/tip_create_account_two"
                    android:textColor="#FF000000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginBottom="@dimen/space_normal">

            <Button
                android:id="@+id/btn_create_account"
                style="@style/ButtonNext"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:text="@string/action_next" />

            <TextView
                android:id="@+id/btn_import_account"
                style="@style/TextViewCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/action_import_account" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>