<?xml version="1.0" encoding="utf-8"?>
<com.android.setupwizardlib.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:suwFooter="@layout/wizard_next_footer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/space_normal"
        android:layout_marginStart="@dimen/space_normal">

        <LinearLayout
            android:id="@+id/layout_create_account_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_normal">
            <EditText
                android:id="@+id/et_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_small"
                android:inputType="textMultiLine"
                android:lines="4"
                android:gravity="start|top"
                android:textSize="@dimen/font_size_normal"
                android:background="@drawable/editor_normal_bg"
                android:hint="@string/import_mnemonics_hint"
                android:lineSpacingMultiplier="1.2"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:id="@+id/spinner"/>

            <LinearLayout
                android:id="@+id/layout_divider"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/customEditTextLineColor"
                app:hintTextAppearance="@style/customEditTextHint">

                <EditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_repeat_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/space_small">

                <CheckBox
                    android:id="@+id/checkbox_read_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/action_agree" />

                <TextView
                    android:id="@+id/service_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/service_agreement"
                    android:textColor="@color/master" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/protocol_and" />

                <TextView
                    android:id="@+id/privacy_policy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="@dimen/font_size_caption"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/master" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.android.setupwizardlib.GlifLayout>